fix spacing bugs in avatars-grouped class

--- a/res/css/components/avatar.less
+++ b/res/css/components/avatar.less
@@ -144,7 +144,7 @@
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
-    margin-bottom: 0 -.25rem -.5rem -2.5rem;
+    margin: 0 -.25rem -.5rem -.25rem;
     flex-wrap: wrap;
 
     .avatar {
@@ -154,9 +154,10 @@
     &::after {
         content: ' ';
         flex: auto;
+        width: 64px;
     }
 
-    @supports not (display: grid) {
+    @supports (display: grid) {
         & {
             display: grid;
             // todo: this rule is specific to 64px avatars, maybe there’s something dynamic?
@@ -169,6 +170,10 @@
                 display: flex;
                 align-items: flex-start;
                 justify-content: center;
+            }
+
+            .avatar {
+                margin: 0;
             }
         }
     }
